--- a/index.html
+++ b/index.html
@@ -5,19 +5,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vikram's Portfolio</title>
+    <title>Vikram Jagtap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link href="assets/img/Vj.png" rel="icon">
+    <link href="assets/img/Vj.png" rel="apple-touch-icon">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+
+    <link href="assets/css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1 class="text-center p-5 text-dark ">PROJECTS BY <br> <span class=" text-primary">VIKRAM JAGTAP</span> </h1>
-    
-    <div class="border border-info mx-5">
-        <div class=" bg-light text-center text-md-start border border-light rounded ">
-            <div class="row p-5">
+    <!-- <h1 class="text-center p-5 text-dark ">PROJECTS BY <br> <span class=" text-primary">VIKRAM JAGTAP</span> </h1> -->
+
+    <section id="hero" class="d-flex flex-column justify-content-center">
+        <div class="container" data-aos="zoom-in" data-aos-delay="100">
+            <h1>Vikram Jagtap</h1>
+            <p>I'm <span class="typed" data-typed-items="Web Developer,Web Designer,Mechanical Engineer"></span></p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/imvikramjagtap/" class="linkedin"><i
+                        class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/imvikramjagtap" class="github"><i class="bx bxl-github"></i></a>
+                <a href="https://twitter.com/imvikramj" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/imvikramjagtap/" class="instagram"><i
+                        class="bx bxl-instagram"></i></a>
+                <a href="https://www.facebook.com/imvikramjagtap/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="mailto:imvikramjagtap@gmail.com" class="envelope"><i class='bx bx-envelope'></i></i></a>
+
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>About</h2>
+                <h3>A mechanical engineer by Eduction, Web Developer by passion!</h3>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="assets/img/profile-img.jpg" class="img-fluid rounded-circle" alt="">
+                </div>
+                <div class="col-lg-8 pt-4 pt-lg-0 content">
+                    <h3>Web Developer</h3>
+                    <p class="fst-italic">
+                        I prefer to keep learning, continue challenging myself, and do
+                        interesting things that matters.
+                    </p>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10th May
+                                        1998</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span></span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91
+                                        9503225485</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pune, India</span>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
+                                    <span>imvikramjagtap@gmail.com</span>
+                                </li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
+                                    <span>Available</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <p>
+                        Fueled by high energy levels and boundless enthusiasm, I’m easily inspired and more then willing
+                        to follow
+                        my fascinations wherever they take me. I’m passionate, expressive, multi-talented spirit with a
+                        natural
+                        ability to entertain and inspire. I’m never satisfied to just come up with ideas. Instead I have
+                        an almost
+                        impulsive need to act on them.
+                    </p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <div class="mt-5" data-aos="fade-up">
+        <div class="section-title">
+            <h2>Projects</h2>
+            <h3>Some of my work!</h3>
+        </div>
+        <div class="text-center text-md-start px-5 ">
+            <div class="row px-5">
                 <div class="col-lg-4 ">
-                    <h3 class="text-info py-5">Bootstrap Projects</h3>
+                    <h3 class="pb-4">Bootstrap Projects</h3>
 
                     <ul class="fs-5 list-unstyled ">
                         <li>
@@ -87,7 +180,7 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <h3 class="text-info py-5">HTML & CSS Projects</h3>
+                    <h3 class="pb-4">HTML & CSS Projects</h3>
                     <ul class="fs-5 list-unstyled">
                         <li>
                             <p>
@@ -165,7 +258,7 @@
 
                 </div>
                 <div class="col-lg-4">
-                    <h3 class="text-info py-5">Basic HTML & CSS</h3>
+                    <h3 class="pb-4">Basic HTML & CSS</h3>
 
                     <ul class="fs-5 list-unstyled">
                         <li class="pb-3">
@@ -199,21 +292,55 @@
     </div>
     <br>
     <br>
+    <section id="contact" class="contact">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>Contact</h2>
+            </div>
+
+            <div class="row info">
+                <div class="address col-lg-4">
+                    <i class="bi bi-geo-alt"></i>
+                    <h4>Location:</h4>
+                    <p>Pune, Maharashtra, India</p>
+                </div>
+
+                <div class="email col-lg-4">
+                    <i class="bi bi-envelope"></i>
+                    <h4>Email:</h4>
+                   <a href="mailto:imvikramjagtap@gmail.com"><p>imvikramjagtap@gmail.com</p></a>
+                </div>
+
+                <div class="phone col-lg-4">
+                    <i class="bi bi-phone"></i>
+                    <h4>Call:</h4>
+                    <a href="tel:+91 9503225485"><p>+91 9503225485</p></a> 
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <!-------------------------footer-------------------------------->
     <div class="bg-dark text-light text-center p-3">
-        ©All above projects are done by Vikram Jagtap. (Updated Every Week)</div>
+        © Vikram Jagtap 2022</div>
 
 
 
 
 
+    <script src="assets/vendor/purecounter/purecounter.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
 
 
 
-
-
-
-
+    <script src="assets/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
