--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <ul>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10th May
                                         1998</span></li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span></span></li>
+                             
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91
                                         9503225485</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pune, India</span>
@@ -78,11 +78,10 @@
                                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span>
                                 </li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                                     <span>imvikramjagtap@gmail.com</span>
                                 </li>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong>
-                                    <span>Available</span></li>
+                                
                             </ul>
                         </div>
                     </div>
