--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
                             <p class="card-text">Om Industries was my first client, its a business website with around 6
                                 pages.
                                 HTML, CSS, JS, etc was used while building this project.</p>
-                            <a href="https://www.omindst.com/" class="btn btn-primary">Visit Om Industries</a>
+                            <div class="text-center">
+                                <a href="https://www.omindst.com/" class="btn btn-primary">Visit Om Industries</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -153,7 +155,10 @@
                             <h4 class="card-title">WellVett Events</h4>
                             <p class="card-text">WellVett Events gave me confident to work in design field, the design
                                 and development gave me idea what a customer wants to attract toward a site. </p>
-                            <a href="https://www.wellvettevents.com/" class="btn btn-primary">Visit WellVett Events</a>
+                            <div class="text-center">
+                                <a href="https://www.wellvettevents.com/" class="btn btn-primary">Visit WellVett
+                                    Events</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -164,7 +169,9 @@
                             <h4 class="card-title">MECVEC</h4>
                             <p class="card-text">I always wanted my own business site so I made a fun site that is fully
                                 functional as a company, it was fun putting my imagination on screen.</p>
-                            <a href="https://www.mecvec.com/" class="btn btn-primary">Visit MECVEC.COM</a>
+                            <div class="text-center">
+                                <a href="https://www.mecvec.com/" class="btn btn-primary">Visit MECVEC.COM</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -181,11 +188,14 @@
                             <h4 class="card-title">Trello Clone</h4>
                             <p class="card-text">As trello is one of the best and simple example of bootstrap it did
                                 attract me, technologies used HTML, CSS, BOOTSTRAP </p>
-                            <a href="https://trello-clone-by-vikram.netlify.app/" class="btn btn-primary">Visit Clone
-                                site</a>
-                            <a href="https://trello.com/" class="btn btn-primary">Visit Main site</a>
-                            <a href="https://github.com/imvikramjagtap/trello-clone" class="github "><i
-                                    class="bx bxl-github bx-sm align-middle"></i></a>
+                            <div class="text-center">
+                                <a href="https://trello-clone-by-vikram.netlify.app/" class="btn btn-primary m-2">Visit
+                                    Clone
+                                    site</a>
+                                <a href="https://trello.com/" class="btn btn-primary m-2">Visit Main site</a>
+                                <a href="https://github.com/imvikramjagtap/trello-clone"
+                                    class="github m-2 text-center"><i class="bx bxl-github bx-md align-middle"></i></a>
+                            </div>
 
                         </div>
                     </div>
@@ -197,11 +207,14 @@
                             <h4 class="card-title">Swiggy Clone</h4>
                             <p class="card-text">I love to order from swiggy and while learning web development skills
                                 recreating swiggy's landing page was fun. technologies used HTML,CSS</p>
-                            <a href="https://clone-by-vikram.netlify.app/swiggy.html" class="btn btn-primary">Visit
-                                Clone site</a>
-                            <a href="https://swiggy.com/" class="btn btn-primary">Visit Main site</a>
-                            <a href="https://github.com/imvikramjagtap/clone-by-vikram/blob/main/swiggy.html"
-                                class="github "><i class="bx bxl-github bx-sm align-middle"></i></a>
+                            <div class="text-center">
+                                <a href="https://clone-by-vikram.netlify.app/swiggy.html"
+                                    class="btn btn-primary m-2">Visit
+                                    Clone site</a>
+                                <a href="https://swiggy.com/" class="btn btn-primary m-2">Visit Main site</a>
+                                <a href="https://github.com/imvikramjagtap/clone-by-vikram/blob/main/swiggy.html"
+                                    class="github m-2"><i class="bx bxl-github bx-md align-middle"></i></a>
+                            </div>
 
                         </div>
                     </div>
@@ -214,17 +227,22 @@
                             <h4 class="card-title">RED BUS Clone</h4>
                             <p class="card-text">I re-created front-end of RED BUS, because I love to travel and redbus
                                 is my companion, technologies used HTML, CSS.</p>
-                            <a href="https://clone-by-vikram.netlify.app/redbus.html" class="btn btn-primary">Visit
-                                Clone site</a>
-                            <a href="https://redbus.com/" class="btn btn-primary">Visit Main site</a>
-                            <a href="https://github.com/imvikramjagtap/clone-by-vikram/blob/main/redbus.html"
-                                class="github "><i class="bx bxl-github bx-sm align-middle"></i></a>
+                            <div class="text-center">
+                                <a href="https://clone-by-vikram.netlify.app/redbus.html"
+                                    class="btn btn-primary m-2">Visit
+                                    Clone site</a>
+                                <a href="https://redbus.com/" class="btn btn-primary m-2">Visit Main site</a>
+                                <a href="https://github.com/imvikramjagtap/clone-by-vikram/blob/main/redbus.html"
+                                    class="github m-2 text-center "><i class="bx bxl-github bx-md align-middle"></i></a>
+                            </div>
                         </div>
+
                     </div>
                 </div>
-
-
             </div>
+
+
+
 
 
             <!-- ------------------------------------------------------ -->
@@ -236,10 +254,12 @@
                             <h4 class="card-title">Drum Kit</h4>
                             <p class="card-text">Its an simple virtual kit of drums with onscreen clicks and even
                                 keyboard controls, technologies used HTML, CSS, JAVASCRIPT </p>
-                            <a href="https://drum-kit-by-vikram.netlify.app/" class="btn btn-primary">Let's play some
-                                drums</a>
-                            <a href="https://github.com/imvikramjagtap/drumkit" class="github"><i
-                                    class="bx bxl-github bx-md align-middle"></i></a>
+                            <div class="text-center">
+                                <a href="https://drum-kit-by-vikram.netlify.app/" class="btn btn-primary">Let's play
+                                    drums</a>
+                                <a href="https://github.com/imvikramjagtap/drumkit" class="github"><i
+                                        class="bx bxl-github bx-md align-middle"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -253,17 +273,20 @@
                                 calculations,
                                 technologies used HTML, CSS, JAVASCRIPT.
                             </p>
-                            <a href="https://calculator-by-vikram.netlify.app/" class="btn btn-primary">Calculate todays
-                                spends </a>
-                            <a href="https://github.com/imvikramjagtap/Calculator" class="github"><i
-                                    class="bx bxl-github bx-md align-middle"></i></a>
+                            <div class="text-center">
+                                <a href="https://calculator-by-vikram.netlify.app/" class="btn btn-primary">Calculate
+                                </a>
+                                <a href="https://github.com/imvikramjagtap/Calculator" class="github"><i
+                                        class="bx bxl-github bx-md align-middle"></i></a>
+                            </div>
 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <p class="text-center mt-3"><a href="./assets/Vikram's CV FRE.pdf">Download Resume <i class="bi bi-download"></i></a></p>
+        <p class="text-center mt-3"><a href="./assets/Vikram's CV FRE.pdf">Download Resume <i
+                    class="bi bi-download"></i></a></p>
     </div>
 
 
