--- a/index.html
+++ b/index.html
@@ -188,11 +188,12 @@
                             <h4 class="card-title">Trello Clone</h4>
                             <p class="card-text">As trello is one of the best and simple example of bootstrap it did
                                 attract me, technologies used HTML, CSS, BOOTSTRAP </p>
-                            <div class="text-center">
-                                <a href="https://trello-clone-by-vikram.netlify.app/" class="btn btn-primary m-2">Visit
+                            <div class="text-center ">
+                                <a href="https://trello-clone-by-vikram.netlify.app/" class="btn btn-primary">Visit
                                     Clone
                                     site</a>
                                 <a href="https://trello.com/" class="btn btn-primary m-2">Visit Main site</a>
+                                <br>
                                 <a href="https://github.com/imvikramjagtap/trello-clone"
                                     class="github m-2 text-center"><i class="bx bxl-github bx-md align-middle"></i></a>
                             </div>
@@ -209,9 +210,10 @@
                                 recreating swiggy's landing page was fun. technologies used HTML,CSS</p>
                             <div class="text-center">
                                 <a href="https://clone-by-vikram.netlify.app/swiggy.html"
-                                    class="btn btn-primary m-2">Visit
+                                    class="btn btn-primary">Visit
                                     Clone site</a>
                                 <a href="https://swiggy.com/" class="btn btn-primary m-2">Visit Main site</a>
+                                <br>
                                 <a href="https://github.com/imvikramjagtap/clone-by-vikram/blob/main/swiggy.html"
                                     class="github m-2"><i class="bx bxl-github bx-md align-middle"></i></a>
                             </div>
@@ -229,9 +231,10 @@
                                 is my companion, technologies used HTML, CSS.</p>
                             <div class="text-center">
                                 <a href="https://clone-by-vikram.netlify.app/redbus.html"
-                                    class="btn btn-primary m-2">Visit
+                                    class="btn btn-primary">Visit
                                     Clone site</a>
                                 <a href="https://redbus.com/" class="btn btn-primary m-2">Visit Main site</a>
+                                <br>
                                 <a href="https://github.com/imvikramjagtap/clone-by-vikram/blob/main/redbus.html"
                                     class="github m-2 text-center "><i class="bx bxl-github bx-md align-middle"></i></a>
                             </div>
